<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectThreeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/op_ohm_v"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/contrast_normal"
                    android:width="20dp"
                    android:theme="@style/TextThree" />

                <EditText
                    android:id="@+id/ohm_v"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:width="80dp"
                    android:textColor="@color/contrast_mid"
                    android:theme="@style/TextFive" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="100dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/op_ohm_i"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/contrast_normal"
                        android:width="20dp"
                        android:theme="@style/TextThree" />

                    <EditText
                        android:id="@+id/ohm_i"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:width="80dp"
                        android:textColor="@color/contrast_mid"
                        android:theme="@style/TextFive" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="100dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/op_ohm_r"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/contrast_normal"
                        android:width="20dp"
                        android:theme="@style/TextThree" />

                    <EditText
                        android:id="@+id/ohm_r"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:width="80dp"
                        android:textColor="@color/contrast_mid"
                        android:theme="@style/TextFive" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>